UV Index API added and classes to change UV color added

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,3 +31,15 @@
     color: white;
     
 }
+
+.favorable {
+    background-color: #66FF66;
+}
+
+.moderate {
+    background-color: #FFFF66;
+}
+
+.severe {
+    background-color: #FF6666;
+}
